fill jump button

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,9 @@
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 */
+.white-hover:hover{
+    background: white;
+}
 
 .sidenav {
   height: 100%;
