--- a/app-demos/Determinantes-Sociales/views/dashboard.html
+++ b/app-demos/Determinantes-Sociales/views/dashboard.html
@@ -111,7 +111,11 @@
                     </div>
                   </div>
                 </div>
-                <div id="map" class="col-lg-7"></div>
+                <div id="map" style="outline: 1px dashed lightgray" class="col-lg-7 mb-4">
+                    <div class="card-body">
+                        GoogleMap API not used in demo for security purposes
+                    </div>
+                </div>
                 </div>
 
               <!-- Content Row -->
