--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2633,6 +2633,7 @@ input, select, textarea {
 
 		.icon.style2:before {
 			border-radius: 2.75em;
+      background-color: white;
 			display: inline-block;
 			height: 2.75em;
 			line-height: 2.75em;
