--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 */
 
 @media screen and (max-width: 750px) {
-  .too-small {display:none;}
+  .too-small {display:none;} !important
 }
 
 .white-hover:hover{
